[gd_scene load_steps=4 format=3 uid="uid://d2xckni2voy4s"]

[ext_resource type="FontFile" uid="uid://yri1upmlc5mg" path="res://fonts/Pixeled.ttf" id="1_ahhtf"]
[ext_resource type="Script" uid="uid://bt6ugs4trql2x" path="res://code/hud.gd" id="1_oo0fn"]
[ext_resource type="Texture2D" uid="uid://dngyq72127aae" path="res://art/three_image.png" id="3_5ysmq"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_oo0fn")

[node name="Score_label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_right = 60.0
offset_bottom = 168.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162
metadata/_edit_use_anchors_ = true

[node name="Message" type="Label" parent="."]
custom_minimum_size = Vector2(480, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -110.0
offset_right = 240.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = -60
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 50
text = "DODGE THE ENNEMIS!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Start_Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -180.0
offset_right = 100.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 30
text = "START
"

[node name="Message_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="tree1" type="TextureRect" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -170.0
offset_right = 125.0
offset_bottom = -95.0
grow_vertical = 0
texture = ExtResource("3_5ysmq")
expand_mode = 1
flip_h = true
metadata/_edit_use_anchors_ = true

[node name="tree2" type="TextureRect" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 350.0
offset_top = -170.0
offset_right = 425.0
offset_bottom = -95.0
grow_vertical = 0
texture = ExtResource("3_5ysmq")
expand_mode = 1
flip_h = true

[connection signal="pressed" from="Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="Message_Timer" to="." method="_on_message_timer_timeout"]
